--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,81 @@
-$color: deeppink;
-$bg: rgb(255, 245, 250);
+@use "base/reset";
+@use "base/fonts";
 
-body {
-  background: $bg;
-  color: $color;
+$level-one: translateZ(8rem);
+$level-two: translateZ(4rem);
+$level-three: translateZ(2rem);
+
+.card {
+  width: 400px;
+  height: auto;
+  margin-inline: auto;
+  padding-block: 3rem;
+  
+
+  &__content {
+    text-align: center;
+    position: relative;
+    padding: 5em;
+    transition: transform 3s;
+    transform-style: preserve-3d;
+  }
+
+  &:hover .card__content {
+    transform: rotateY(.5turn);
+  }
+  
+  &__front, 
+  &__back {
+    color: hsl(214, 71%, 90%);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 18em 2em;
+    outline: 15px solid hsl(0, 0%, 15%);
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+  }
+  
+  &__title {
+    font-size: 4.5rem;
+    transform: translateZ(6rem);
+    position: relative;
+    padding-block: 1.2em .2em;
+    text-shadow: 2px 2px hsl(165, 86%, 41%);
+  }
+  
+  &__subtitle {
+    color:hsl(165, 86%, 61%);
+    font-size: 1.2rem;
+    transform: translateZ(4rem);
+  }
+  
+  &__body {
+    transform: translateZ(3rem);
+  }
+
+  &__front {
+    background-color: hsl(216, 40%, 26%);
+    background-image: url('/src/images/taemin.jpg');
+    background-size: cover;
+    background-blend-mode: overlay;
+  }
+
+  &__front::before {
+    content: "";
+    width: 380px;
+    height: 555px;
+    border: 5px solid hsl(165, 86%, 41%);
+    position: absolute;
+    transform: $level-three;
+    top: 10px;
+    left: 10px;
+  }
+  
+  &__back {
+    transform: rotateY(.5turn);
+    background-color: hsl(216, 40%, 26%);
+  }
 }
