--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -7,3 +7,12 @@ body {
     height: 100vh;
     background: hsl(220, 10%, 12%);
 }
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    padding-block: 10px;
+}
