Fix mobile state of card

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,3 +1,5 @@
+@use 'variables' as var;
+
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -18,5 +20,5 @@ li {
 }
 
 *:focus-within {
-    outline: none;
+    height: 575px;
 }
