--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: "Alatsi";
+    font-weight: normal;
     src: url('/src/fonts/Alatsi-Regular.ttf') format("truetype");
 }
 
